# Sandshark-Beta-Lab-

./: LICENSE
topside/: INSTALL.txt
topside/qgc/: MITOUTWIDE.waypoints  MIT_DEMO_TAKE1.waypoints  MIT_DEMO_TAKE_SHORT.waypoints  MIT_LOCKDOWN.waypoints  MIT_LOCK_DEPTH.waypoints  README.md  qgroundcontrol.pro.user.18  untitled.waypoints
topside/qgc/release/: Mission1.waypoints
topside/qgc/src/: Waypoint.cc  Waypoint.h  d.txt
topside/qgc/src/FactSystem/: FactSystem.cc
topside/qgc/src/ui/: PrimaryFlightDisplay.cc  UASControl.ui  UASControl.ui~  UASView.ui  UASView.ui~  WaypointEditableView.cc  (+1 more)
vehicle/: INSTALL.txt  android.cmake
vehicle/adapt-sysroot/: build.prop
vehicle/adapt-sysroot/app/: Bluetooth.apk  CABLService.apk  Calculator.apk  Calendar.apk  CalendarProvider.apk  CellBroadcastReceiver.apk  CertInstaller.apk  DefaultContainerService.apk  DeskClock.apk  DigitalPenWorkService.apk  DrmProvider.apk  Email.apk  GestureOverlayService.apk  GestureTouchInjectionService.apk  KeyChain.apk  LiveWallpapers.apk  LiveWallpapersPicker.apk  MediaProvider.apk  Mms.apk  Music.apk  Phone.apk  PicoTts.apk  PrivInit.apk  Protips.apk  Provision.apk  QualcommSettings.apk  QuickSearchBox.apk  ReceiveAT.apk  Settings.apk  SettingsProvider.apk  SharedStorageBackup.apk  SoundRecorder.apk  Stk.apk  SystemUI.apk  TelephonyProvider.apk  TimeService.apk  VisualizationWallpapers.apk  VoiceDialer.apk  WfdP2pService.apk  WfdService.apk  (+2 more)
vehicle/adapt-sysroot/etc/: BCM4330.hcd  RemoTI_RNP.cfg  inetd.conf  init.brcm.wifi.sh  init.qcom.bt.sh  media_profiles.xml  wfdconfig.xml
vehicle/adapt-sysroot/lib/: libapr-1.la  libaprutil-1.la  libbcc.so.sha1  libexpat.la  liblog4cxx.la
vehicle/adapt-sysroot/ros_install_isolated/: .rosinstall  _setup_util.py  setup.sh
vehicle/adapt-sysroot/xbin/: add-property-tag  addr2line  agent  ar  as  attest  avinfo  avtest  bdaddr  bt_sco_app  btool  bttest  busybox  c++filt  check-lost+found  cpueater  cpustats  daemonize  dbus-monitor  dbus-send  dexdump  dhdutil  directiotest  dwp  elfedit  gprof  hciconfig  hcidump  hcitool  hstest  kfmapp  l2ping  l2test  latencytop  ld.bfd  ld.gold  librank  lmptest  micro_bench  nc  (+26 more)
vehicle/java/: Makefile
vehicle/java/BluefinGPS/: AndroidManifest.xml  build.xml
vehicle/ros/: .gitignore  android.toolchain  build_arm.sh  sandshark.sh
vehicle/ros/src/sandshark_apps/: CMakeLists.txt  package.xml
vehicle/ros/src/sandshark_apps/actionselector/: actionselector_node.cpp
vehicle/ros/src/sandshark_apps/config/: dynamiccontrol.yaml  health.yaml  motion.yaml
vehicle/ros/src/sandshark_apps/dynamiccontrol/: dynamiccontrol_node.cpp
vehicle/ros/src/sandshark_apps/health/: health_node.cpp
vehicle/ros/src/sandshark_apps/logger/: actuallyusefulrecorder.cpp  actuallyusefulrecorder.h  sharklogger_node.cpp  sharklogger_node_bkp.cpp  sharklogger_node_bkp2.cpp  startstoprecorder.cpp  startstoprecorder.h
vehicle/ros/src/sandshark_apps/navigation/: navigation_node.cpp
vehicle/ros/src/sandshark_apps/objectivecontrol/: objectivecontrol_node.cpp
vehicle/ros/src/sandshark_apps/pathplanning/: pathplanning_node.cpp
vehicle/ros/src/sandshark_common/: CMakeLists.txt  PIDController.cpp  catkin_all.launch  condition.cpp  driver_base.cpp  main.cpp  package.xml  runtimeEnv.bash  task_base.cpp
vehicle/ros/src/sandshark_common/include/sandshark_common/: PIDController.h  condition.h  driver_base.h  main.h  task_base.h  version.h
vehicle/ros/src/sandshark_common/linux/: csdio.h  i2c-dev.h
vehicle/ros/src/sandshark_common/mavlink/v1.0/adapt/: adapt.h  mavlink.h  mavlink_msg_adapt_polygon.h  mavlink_msg_uav_payload_data.h  testsuite.h  version.h
vehicle/ros/src/sandshark_common/mavlink/v1.0/common/: version.h
vehicle/ros/src/sandshark_common/mavlink/v1.0/minimal/: version.h
vehicle/ros/src/sandshark_common/mavlink/v1.0/test/: version.h
vehicle/ros/src/sandshark_drivers/: CMakeLists.txt  package.xml
vehicle/ros/src/sandshark_drivers/altimeter/: altimeter_node.cpp
vehicle/ros/src/sandshark_drivers/currentsense/: currentsense_node.cpp
vehicle/ros/src/sandshark_drivers/depth/: MS5803.cpp  MS5803.h  MS89BSD.cpp  MS89BSD.h  depth_node.cpp
vehicle/ros/src/sandshark_drivers/envdepth/: MS8607BA01.cpp  MS8607BA01.h  MS89BSD.cpp  MS89BSD.h  env_depth_node.cpp
vehicle/ros/src/sandshark_drivers/environmental/: environmental_node.cpp
vehicle/ros/src/sandshark_drivers/frontseat/: bfMessage.cpp  bfMessage.h  bpMessage.cpp  bpMessage.h  fnmea.cpp  fnmea.h  frontseat_node.cpp
vehicle/ros/src/sandshark_drivers/gasgauge/: BQ34Z100.cpp  BQ34Z100.h  gasgauge_node.cpp
vehicle/ros/src/sandshark_drivers/gps/: gps_node.cpp
vehicle/ros/src/sandshark_drivers/led/: SX1509.cpp  SX1509.h  led_node.cpp
vehicle/ros/src/sandshark_drivers/mavlink/: ellipsoidFit.cpp  ellipsoidFit.h  mavlink_node.cpp
vehicle/ros/src/sandshark_drivers/motion/: motion_node.cpp
vehicle/ros/src/sandshark_drivers/tailcone/: conversation.h  tailcone_node.cpp
vehicle/ros/src/sandshark_msgs/: CMakeLists.txt  package.xml
vehicle/ros/src/sandshark_msgs/msg/: Accelerometer.msg  ActuatorStatus.msg  Altitude.msg  AltitudeCommands.msg  ApplicationAbort.msg  ApplicationHealthStatus.msg  ApplicationRestartCommand.msg  ApplicationStatus.msg  BoardHealthStatus.msg  CurrentObjective.msg  CurrentSense.msg  Depth.msg  DynamicControlCommand.msg  DynamicControlGains.msg  DynamicRequestsStatus.msg  ElapsedMissionTime.msg  Environmental.msg  GPS.msg  GasGauge.msg  GravityAcceleration.msg  Gyro.msg  HealthValues.msg  LEDCommand.msg  LEDStatus.msg  LastAbort.msg  LeakDetect.msg  LinearAcceleration.msg  Magnetometer.msg  MavlinkObjectiveCommand.msg  MavlinkPolygon.msg  MavlinkWaypointList.msg  MotionCorrected.msg  MotionRaw.msg  Navigation.msg  ObjectiveCommand.msg  ObjectiveControlStatus.msg  OrientationDebug.msg  OrientationEuler.msg  OrientationQuaternion.msg  PID.msg  (+12 more)
vehicle/ros/src/sandshark_msgs/srv/: AccelCalib.srv  MagCalib.srv  UpdateDCGain.srv  UpdateHealthVal.srv
vehicle/ros/sysfiles/: authorized_keys  mkshrc  sandshark_operator.openssh  wpa_supplicant.conf
(+272 files in other folders)
