<?xml version="1.0"?>
<package>
  <name>sandshark_msgs</name>
  <version>1.0.0</version>
  <description>Messages for Bluefin Robotics SandShark</description>

  <maintainer email="sandshark-maintainer@bluefinrobotics.com">Sandshark Maintainer</maintainer>
  <license>BSD</license>

  <url type="website">http://www.bluefinrobotics.com/sandshark/</url>
  <!-- Also add 'bugtracker' and 'repository' urls. -->

  <author>Scott Biddlestone</author>
  <author>Brenden Gibbons</author>
  <author>Chris Murphy</author>
  <author>Jeff Adams</author>
  <author>Brad Powers</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
